apps/site-portfolio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
  namespace: site-internet
  labels:
    app: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - name: portfolio-container
        image: ghcr.io/firetoak/portfolio-bts-sio:1.5.1 # {"$imagepolicy": "flux-system:site-portfolio"}
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "50m"
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio
spec:
  type: ClusterIP
  selector:
    app: portfolio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
